--- a/package.json
+++ b/package.json
@@ -53,6 +53,11 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.68.0",
     "react-resizable-panels": "^4.0.9",
+    "react-textarea-autosize": "^8.5.9",
+    "@tanstack/react-query": "^5.90.2",
+    "@inngest/agent-kit": "^0.13.0",
+    "inngest": "^3.44.0",
+    "random-word-slugs": "^0.1.7",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
