--- a/package.json
+++ b/package.json
@@ -52,12 +52,13 @@
     "next": "16.1.0",
     "next-themes": "^0.4.6",
     "prisma": "^5.22.0",
-    "react-resizable-panels": "^3.0.6",
+    "prismjs": "^1.30.0",
     "random-word-slugs": "^0.1.7",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.68.0",
+    "react-resizable-panels": "^3.0.6",
     "react-textarea-autosize": "^8.5.9",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
