--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-textarea-autosize": "^8.5.9",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
+    "streamdown": "^1.3.0",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
     "zod": "^4.2.1"
